crates/bevy_ecs/compile_fail/tests/ui/query_iter_combinations_mut_iterator_safety.rs
use bevy_ecs::prelude::*;

#[derive(Component)]
struct A(usize);

fn system(mut query: Query<&mut A>) {
    let iter = query.iter_combinations_mut();

    is_iterator(iter)
    //~^ E0277
}

fn is_iterator<T: Iterator>(_iter: T) {}
